# nml

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  merge_adapter.py  nml-metal  package.json  train_nml.py
.cursor/: mcp.json
.cursor/skills/nml-codegen/: SKILL.md
docs/: GETTING_STARTED.md  NML_API_Reference.md  NML_Architecture_Document.md  NML_Backends.md  NML_G_Spec.md  NML_Implementation_Document.md  NML_LLM_PROMPT.md  NML_M2M_Spec.md  NML_Multi_Agent_Architecture.md  NML_Performance.md  NML_Phases_Roadmap.md  NML_SPEC.md  NML_System_Architecture.mermaid  NML_Usage_Guide.md
domain/: evaluate_nml.py  setup_arc_training.bat  verify_arc_env.py
lsp/: pyproject.toml
lsp/nml_lsp/: __init__.py  __main__.py  completions.py  diagnostics.py  goto_def.py  hover.py  opcode_db.py  semantic_tokens.py  server.py  symbols.py
programs/: adaptive_example.nml  adaptive_example.nml.data  anomaly_detector.nml  anomaly_weights.nml.data  calculator.nml  denver_forecast.nml  denver_forecast.nml.data  denver_monthly.nml  denver_monthly.nml.data  denver_v2.nml  denver_v2.nml.data  extension_demo.nml  extension_demo.nml.data  f1_laptime_prep.py  f1_laptime_regression.nml  f1_laptime_regression.py  f1_pitstop.nml.data  f1_pitstop_norm.json  f1_pitstop_prep.py  f1_pitstop_regression.nml  f1_pitstop_regression.py  f1_podium_classification.nml  f1_podium_classification.py  f1_podium_prep.py  fibonacci.nml  fibonacci_symbolic.nml  fizzbuzz.nml  fraud_detection_prompt.jsonl  hello_world.nml  house_price.nml  house_price.nml.data  primes.nml  rate_cascade.nml  rate_cascade.nml.data  rate_neural.nml  rate_neural.nml.data  rate_tensor_table.nml  rate_tensor_table.nml.data  self_train.nml  self_train.nml.data  (+10 more)
python/: nml.py
runtime/: nml.c  nml_api.h  nml_backend_cuda.cu  nml_backend_cuda.h  nml_backend_hailo.cpp  nml_backend_hailo.h  nml_backend_metal.m  nml_backend_sycl.cpp  nml_crypto.h  nml_fmt.c  nml_fmt.h  nml_tensor.h  nmld.c  tweetnacl.c  tweetnacl.h
serve/: audit_log.py  execution_service.py  ml_advisor_kb.json  nml_agent.py  nml_collective.py  nml_mcp_server.py  nml_protocol.py  nml_server.py  nml_signing.py  nml_types.py  provenance_tracker.py  start_agents.ps1  start_agents.sh  start_agents_llama.sh
terminal/: hello.jsx  index.html  jxs.ts  nml.js  nml.wasm  nml_chat.jsx  nml_pipeline.jsx  nml_terminal.jsx  nml_wasm.js  pipeline_prompts.json
tests/: compare_models.py  eval_fixtures.nml.data  llm_opcode_test.py  retry_sweep.py  test_256.nml.data  test_constrained.py  test_features.nml  test_loop2.nml  test_m2m.nml  test_m2m.nml.data  test_onnx_import.py  test_python_binding.py  test_sadd.nml  test_single.nml  test_sycl_loop.nml  test_symbolic.nml  test_symbolic_features.nml  test_verbose.nml  training_quality.py
tests/opcode_coverage/: 01_arithmetic.nml  01_arithmetic.nml.data  02_activation.nml  02_activation.nml.data  03_memory.nml  03_memory.nml.data  04_dataflow.nml  04_dataflow.nml.data  05_compare.nml  05_compare.nml.data  06_control.nml  07_tree.nml  08_system.nml  09_general.nml  10_vision.nml  10_vision.nml.data  10b_vision_4d.nml  10b_vision_4d.nml.data  11_transformer.nml  11_transformer.nml.data  12_reduction.nml  12_reduction.nml.data  13_signal.nml  13_signal.nml.data  14_m2m.nml  14_m2m.nml.data  15_training.nml  15_training.nml.data  15b_loss_ce.nml  15b_loss_ce.nml.data  16_backward.nml  16_backward.nml.data  16_symbolic.nml  17_broadcast.nml  17_broadcast.nml.data  18_gpu_conv.nml  18_gpu_conv.nml.data  19_fusion.nml  20_nlayer_tnet.nml  20_nlayer_tnet.nml.data  (+6 more)
transpilers/: gen_extension_training.py  general_purpose_training_gen.py  nml_anomaly.py  nml_backward_gen.py  nml_boost_gen.py  nml_builder.py  nml_cascade_conv_gen.py  nml_cmpi_fix_gen.py  nml_composer.py  nml_core_training_gen.py  nml_corpus_builder.py  nml_coverage_fix_gen.py  nml_data_schema.py  nml_diff.py  nml_dpo_gen.py  nml_embedding.py  nml_equalize_gen.py  nml_executor.py  nml_format.py  nml_from_numpy.py  nml_from_onnx.py  nml_gap_training_gen.py  nml_grammar.py  nml_jump_fix_gen.py  nml_lark_grammar.py  nml_library_gen.py  nml_patch.py  nml_realworld_gen.py  nml_rebalance_gen.py  nml_regression.py  nml_sadd_ssub_gen.py  nml_selftrain_gen.py  nml_selftrain_pipeline.py  nml_semantic.py  nml_syntax_gen.py  nml_tensor_table_gen.py  nml_tnet_fix_gen.py  nml_to_hailo.py  nml_to_mojo.py  nml_tokenizer_train.py  (+3 more)
