[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nml-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for NML (Neural Machine Language)"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
]

[project.scripts]
nml-lsp = "nml_lsp.server:main"

[tool.setuptools.packages.find]
include = ["nml_lsp*"]
